# Final-mobile

./: README.md  pyproject.toml
backend/: .env.example  .env.test  Dockerfile  MAPBOX_INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run-tests.ps1
backend/alembic/: env.py
backend/alembic/versions/: 00058633f59a_mô_tả_thay_đổi.py  044ca74213ab_create_chats.py  05b05620b14b_create_table_review_and_modified_some_.py  1c7c02c6e0a5_add_cascading_delete_for_notification_.py  2faf2cce0fdc_add_current_location_of_collector.py  3671dc91e666_update_scrapcategory.py  44ee385b221c_add_location_geometry_to_order.py  4623c4e98062_fix_relationship_between_user_and_order.py  59db12976b19_update_table_user.py  6026d6f85b4b_delete_price_per_unit_in_order_item.py  65a8cb88d80e_update_user_cascading_delete.py  6d1f61e51319_add_table_conversation.py  7138eb441180_cascading_delete_for_notiuser.py  7faac493cf35_update_user_attributes.py  83c9e29974a5_add_table_notifacation_and_noti_user.py  88056839676e_fix_nullable.py  93dca1f4e3ae_add_2_img_url_into_order.py  985af2a5aedc_add_important_noti.py  a26b2909d161_create_new_table.py  a708edae86cb_add_slug_to_category.py  a82ab2e60547_update_user_gender_birthday_and_email.py  a8ff23a82374_address_into_order.py  ac9ee686104c_rename_table_from_userrole_to_role.py  cb30e48645cc_add_title_for_noti.py  d6464729e1e4_create_table_message.py  (+2 more)
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/api/: deps.py  (+1 more)
backend/init/: init.sql
backend/tests/: README.md  conftest.py  example_test_patterns.py  utils.py
(+305 files in other folders)
